--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -74,6 +74,7 @@ jobs:
       run: |
         ls -a
         pwd
+      working-directory: ${{github.workspace}}
 
     # # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     # - name: Terraform Init
