--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -64,25 +64,27 @@ jobs:
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     
-    - name: Azure CLI script
-      uses: azure/cli@v2
-      with:
-        azcliversion: latest
-        inlineScript: |
-          az account show
-    - shell: bash
-      run: |
-        ls -a
-        pwd
+    # - name: Azure CLI script
+    #   uses: azure/cli@v2
+    #   with:
+    #     azcliversion: latest
+    #     inlineScript: |
+    #       az account show
+    # - shell: bash
+    #   run: |
+    #     ls -a
+    #     pwd
+    #   working-directory: ${{github.workspace}}
+
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    - name: Terraform Init
+      run: terraform init
+      working-directory: ${{github.workspace}} 
+
+    # Checks that all Terraform configuration files adhere to a canonical format
+    - name: Terraform Validate
+      run: terraform validate
       working-directory: ${{github.workspace}}
-
-    # # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    # - name: Terraform Init
-    #   run: terraform init
-
-    # # Checks that all Terraform configuration files adhere to a canonical format
-    # - name: Terraform Validate
-    #   run: terraform validate
 
     # # Generates an execution plan for Terraform
     # - name: Terraform Plan
