--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -86,9 +86,10 @@ jobs:
       run: terraform validate
       working-directory: ${{github.workspace}}
 
-    # # Generates an execution plan for Terraform
-    # - name: Terraform Plan
-    #   run: terraform plan
+    # Generates an execution plan for Terraform
+    - name: Terraform Plan
+      run: terraform plan
+      working-directory: ${{github.workspace}}
 
     #   # On push to "main", build or change infrastructure according to Terraform configuration files
     #   # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
