--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -70,11 +70,13 @@ jobs:
     #     azcliversion: latest
     #     inlineScript: |
     #       az account show
-    # - shell: bash
-    #   run: |
-    #     ls -a
-    #     pwd
-    #   working-directory: ${{github.workspace}}
+    - shell: bash
+      run: |
+        ls -a
+        pwd
+        echo "$PATH"
+      working-directory: ${{github.workspace}}
+      
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
@@ -86,10 +88,10 @@ jobs:
       run: terraform validate
       working-directory: ${{github.workspace}}
 
-    # Generates an execution plan for Terraform
-    - name: Terraform Plan
-      run: terraform plan
-      working-directory: ${{github.workspace}}
+    # # Generates an execution plan for Terraform
+    # - name: Terraform Plan
+    #   run: terraform plan
+    #   working-directory: ${{github.workspace}}
 
     #   # On push to "main", build or change infrastructure according to Terraform configuration files
     #   # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
