--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -61,12 +61,12 @@ jobs:
       with:
         cli_config_credentials_token: ${{ secrets.TERRAFORM_API_KEY }}
 
-    - name: Azure login
-      uses: azure/login@v2
-      with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    # - name: Azure login
+    #   uses: azure/login@v2
+    #   with:
+    #     client-id: ${{ secrets.AZURE_CLIENT_ID }}
+    #     tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+    #     subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     
     # - name: Azure CLI script
     #   uses: azure/cli@v2
@@ -92,10 +92,10 @@ jobs:
       run: terraform validate
       working-directory: ${{github.workspace}}
 
-    # # Generates an execution plan for Terraform
-    # - name: Terraform Plan
-    #   run: terraform plan
-    #   working-directory: ${{github.workspace}}
+    # Generates an execution plan for Terraform
+    - name: Terraform Plan
+      run: terraform plan
+      working-directory: ${{github.workspace}}
 
     #   # On push to "main", build or change infrastructure according to Terraform configuration files
     #   # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
