--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -83,8 +83,10 @@ jobs:
       
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: terraform init
+    - name: Terraform Plan
+      id: plan
+      run: terraform plan -no-color
+      # continue-on-error: true
       working-directory: ${{github.workspace}} 
 
     # Checks that all Terraform configuration files adhere to a canonical format
