--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -83,10 +83,8 @@ jobs:
       
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Plan
-      id: plan
-      run: terraform plan -no-color
-      # continue-on-error: true
+    - name: Terraform Init
+      run: terraform init
       working-directory: ${{github.workspace}} 
 
     # Checks that all Terraform configuration files adhere to a canonical format
@@ -96,7 +94,9 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan
+      id: plan
+      run: terraform plan -no-color
+      # continue-on-error: true
       working-directory: ${{github.workspace}}
 
     #   # On push to "main", build or change infrastructure according to Terraform configuration files
