--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,10 +51,22 @@ jobs:
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       id: plan
-      run: terraform plan -no-color
+      run: terraform plan
       # continue-on-error: true
       working-directory: ${{github.workspace}}
 
+          # Generates an execution plan for Terraform
+    - name: Terraform Plan
+      id: apply
+      run: terraform apply --auto-approve
+      # continue-on-error: true
+      working-directory: ${{github.workspace}}
+
+    - name: Terraform Plan
+      id: destroy
+      run: terraform destroy --auto-approve
+      # continue-on-error: true
+      working-directory: ${{github.workspace}}
     #   # On push to "main", build or change infrastructure according to Terraform configuration files
     #   # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     # - name: Terraform Apply
